# swarmsense

./: README.md
crazyflie/config/: crazyflies.yaml
crazyflie_examples/: CMakeLists.txt  package.xml  setup.cfg
crazyflie_examples/crazyflie_examples/: gesture_control.py  go_bk.py  go_down.py  go_fw.py  go_left.py  go_right.py  go_up.py  land.py  takeoff.py
crazyflie_examples/crazyflie_examples/model/keypoint_classifier/: keypoint_classifier.hdf5  keypoint_classifier.py  keypoint_classifier.tflite  keypoint_classifier_label.csv  tmp_motion_capture.yaml  tmp_server.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/crazyflie_interfaces/share/crazyflie_interfaces/: package.dsv  package.ps1  package.sh
log/: latest_build
