[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    group_mask = crazyflie_examples.group_mask:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    swap = crazyflie_examples.swap:main
    infinite_flight = crazyflie_examples.infinite_flight:main
    go_up = crazyflie_examples.go_up:main
    go_down = crazyflie_examples.go_down:main
    go_right = crazyflie_examples.go_right:main
    go_left = crazyflie_examples.go_left:main
    go_fw = crazyflie_examples.go_fw:main
    go_bk = crazyflie_examples.go_bk:main
    takeoff = crazyflie_examples.takeoff:main
    land = crazyflie_examples.land:main
    gesture_control = crazyflie_examples.gesture_control:main
